# ProjectCane

./: CMakeLists.txt  README.md
Libraries/include/glad/: glad.h
Sly1-Proto/: alo.cpp  alo.h  barrier.h  bis.cpp  blot.h  clock.h  ctr.cpp  dec.h  dialog.h  dl.h  emitter.h  glshaders.cpp  imgui.ini  light.h  lo.h  main.cpp  main.h  pzo.h  render.cpp  resp.h  shd.cpp  shdanim.cpp  spaprops.h  stepguard.h  ui.h
Sly1-Release/: Sly1-Release.vcxproj  Sly1-Release.vcxproj.filters  alo.cpp  alo.h  aseg.cpp  barrier.h  basic.h  bez.cpp  bez.h  binoc.cpp  bis.cpp  blip.cpp  blip.h  blot.frag  blot.h  blot.vert  blotdec.h  brx.cpp  brx.h  celborder.vert  circler.cpp  circler.h  clock.h  cm.cpp  cnvo.h  coin.cpp  coin.h  crv.cpp  crv.h  debug.cpp  dec.h  dialog.cpp  dialog.h  dl.cpp  dl.h  dysh.cpp  dysh.frag  dysh.h  dysh.vert  emitter.cpp  (+96 more)
